--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
   },
   "homepage": "https://github.com/ryangalvaogp/livraria-galvao#readme",
   "dependencies": {
+    "csvtojson": "^2.0.10",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.6",
     "luxon": "^1.27.0",
+    "multer": "^1.4.2",
     "pg": "^8.6.0",
     "ts-node-dev": "^1.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/luxon": "^1.27.0",
+    "@types/multer": "^1.4.5",
     "@types/node": "^15.12.1",
     "@types/typescript": "^2.0.0",
     "typescript": "^4.3.2"
