--- a/package.json
+++ b/package.json
@@ -18,20 +18,28 @@
   },
   "homepage": "https://github.com/ryangalvaogp/livraria-galvao#readme",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "csvtojson": "^2.0.10",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.6",
     "luxon": "^1.27.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.3",
+    "nodemailer-express-handlebars": "^4.0.0",
     "pg": "^8.6.0",
     "ts-node-dev": "^1.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/luxon": "^1.27.0",
     "@types/multer": "^1.4.5",
     "@types/node": "^15.12.1",
+    "@types/nodemailer": "^6.4.4",
+    "@types/nodemailer-express-handlebars": "^4.0.1",
     "@types/typescript": "^2.0.0",
     "typescript": "^4.3.2"
   }
