--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node-dev --transpile-only --inspect --trace-warnings --unhandled-rejections=strict --ignore-watch node_modules src/server.ts",
     "dev": "ts-node-dev --transpile-only --inspect --trace-warnings --unhandled-rejections=strict --ignore-watch node_modules src/server.ts"
   },
   "repository": {
