--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "ts-node-dev --transpile-only --inspect --trace-warnings --unhandled-rejections=strict --ignore-watch node_modules src/server.ts",
     "dev": "ts-node-dev --transpile-only --inspect --trace-warnings --unhandled-rejections=strict --ignore-watch node_modules src/server.ts"
