--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ yarn-error.log*
 lerna-debug.log*
 
 episodes/*.csv
-achievementesOnCSV/*.csv
+*/achievementesOnCSV/*.csv
+*/booksOnCSV/*.csv
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
